# mxx

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILDER.md  CMakeLists.txt  Cargo.toml  DESIGN.md  GPU.md  LICENSE  PLANS.md  README.md  REVIEW.md  REVIEWER.md  VERIFICATION.md  build.rs  gpu-setup.sh  tmp_run_diamond_we_chunk1_errsigma0_repeat_b067d28_20260622.sh  tmp_run_diamond_we_chunk1_repeat_b067d28_20260621.sh  tmp_run_diamond_we_chunk_scan_b067d28_20260621.sh  tmp_run_diamond_we_full8_w8b1_51b8079_20260620_2243JST.sh  tmp_run_diamond_we_full8_w8b1_55179e3_retry_20260619_2156UTC.sh  tmp_run_diamond_we_full8_w8b1_b78ee6c_20260620_2350JST.sh
.codex/: config.toml  hooks.json
.github/workflows/: ci-self-hosted.yml  ci.yml
agents/: ar16.md
bench/: check_diamond_io_csv_logs.py  security_bits_100_aky24_io_simulation_parameters.csv  security_bits_100_diamond_io_simulation_parameters.csv
benches/: bench_agr16_complete_binary_tree_depth_env_probe.rs  bench_agr16_complete_binary_tree_depth_env_probe_gpu.rs  bench_matrix_mul_cpu.rs  bench_matrix_mul_gpu.rs  bench_preimage_cpu.rs  bench_preimage_gpu.rs  preimage_cpu.rs  preimage_gpu.rs
cuda/: GpuBlock.cu  GpuBlock.h  GpuMatrix.cu  GpuMatrix.h  GpuPoly.cu  GpuPoly.h  GpuPolyInternal.h
cuda/include/: ChaCha.cuh  Matrix.h  Poly.h  PolyInterface.h  Runtime.cuh
cuda/src/: ChaCha.cu  Runtime.cu
docs/architecture/: index.md
docs/design/: gpu_limb_byte_packing.md  (+5 more)
schemas/: plan-approval.schema.json  review-decision.schema.json  session-start-intent.schema.json
scripts/: execplan_gate.sh  execplan_notify.sh  run_build_checks.sh  run_builder_reviewer_loop.sh  run_tests.sh  session_start_hook.sh  stop_hook.sh
src/: env.rs  lib.rs  matrix_elem.rs  openfhe_guard.rs  rlwe_enc.rs  storage.rs  utils.rs
tests/: test_ar16_eval.rs  test_arithmetic_circuit.rs  test_arithmetic_circuit_commit.rs  test_arithmetic_circuit_ggh15.rs  test_arithmetic_circuit_gpu_ggh15.rs  test_arithmetic_circuit_lwe.rs  test_arithmetic_circuit_single_limb.rs  test_commit_modp_chain.rs  test_commit_modq_arith.rs  test_diamond_injector_output_error_plot.rs  test_ggh15_modp_chain.rs  test_ggh15_modq_arith.rs  test_gpu_aky24.rs  test_gpu_aky24_io.rs  test_gpu_diamond_injector_q_bits_vs_max_error_plot_generates_svg.rs  test_gpu_diamond_io.rs  test_gpu_diamond_we.rs  test_gpu_ggh15_ckks_mul.rs  test_gpu_ggh15_goldreich_ring_gsw_bench.rs  test_gpu_ggh15_modp_chain.rs  test_gpu_ggh15_modq_arith.rs  test_gpu_ggh15_montgomery_modq_arith.rs  test_gpu_ggh15_negacyclic_conv_mul.rs  test_gpu_ggh15_nested_rns_modq_arith.rs  test_gpu_ggh15_poly_modq_arith.rs  test_gpu_ggh15_poly_ntt.rs  test_gpu_ggh15_poly_slot_transfer.rs  test_gpu_lwe_goldreich_ring_gsw_bench.rs  test_gpu_lwe_montgomery_goldreich_ring_gsw_bench.rs  test_gpu_lwe_montgomery_modq_arith.rs  test_gpu_lwe_montgomery_ring_gsw_mul_bench.rs  test_gpu_lwe_nested_rns_goldreich_ring_gsw_bench.rs  test_gpu_lwe_nested_rns_modq_arith.rs  test_gpu_lwe_nested_rns_ring_gsw_mul_bench.rs  test_lwe_modp_chain.rs  test_lwe_modq_arith.rs
(+457 files in other folders)
