[package]
name = "mxx"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []
disk = ["libc", "memmap2"]
gpu = []

[dependencies]
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "sync"] }
dashmap = "6.1.0"
serde_json = "1.0"
libc = { version = "0.2", optional = true }
memmap2 = { version = "0.9.5", optional = true }
openfhe = { git = "https://github.com/MachinaIO/openfhe-rs.git" }
num-bigint = { version = "0.4.6", features = ["serde", "rand"] }
num-traits = "0.2.19"
bigdecimal = { version = "0.4" }
thiserror = "1"
rayon = { version = "1.5" }
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.9.0", features = ["std_rng"] }
bincode = "2.0.1"
tracing = "0.1"
memory-stats = "1.2.0"
digest = "0.10"
bitvec = "1"
keccak-asm = { version = "0.1.4" }
tempfile = { version = "3.19.1" }
tracing-subscriber = "0.3"

[dev-dependencies]
sequential-test = "0.2.4"

[build-dependencies]
cc = "1"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "abort"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
